# snake_game

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer-template.json  devcontainer.json
.github/workflows/: cd.yml  ci.yml
src/: config.rs  main.rs
