[package]
name = "snake_game_cli"
version = "0.1.3"
edition = "2024"
description = "snake game build in rust with crossterm"
authors = ["quyc <quycsff@gmail.com>"]
repository = "https://github.com/quyc07/snake_game"
license = "MIT OR Apache-2.0"


[dependencies]
crossterm = "0.28.1"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
json5 = "0.4.1"

